bugfix - overflow problems with long release notes (#280)
fixes https://forum.playcanvas.com/t/bug-editor-builds-runs-off-the-page/11626

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -6066,6 +6066,7 @@ strong {
                     .ui-panel.right {
                         flex: 1 1 auto;
                         height: 100%;
+                        min-width: 0;
 
                         > .ui-header {
                             border-bottom: 1px solid $border-primary;
